--- a/src/assets/css/Auth.css
+++ b/src/assets/css/Auth.css
@@ -1,6 +1,6 @@
 /* Login.css */
 .bg-container {
-    background-image: url('top-view-desk-concept-with-gray-background.jpg'); 
+    background-image: url('https://career-crafter-documents.s3.ap-south-1.amazonaws.com/top-view-desk-concept-with-gray-background.jpg'); 
     background-size: cover;
     background-position: center;
 }
